# ahttp-generator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
ahttp_generator/: __init__.py  __main__.py  main.py
ahttp_generator/core/: __init__.py  ast_helper.py  loader.py  pep8_formatter.py  sanitizer.py  type_mapper.py
ahttp_generator/generator/: __init__.py  client.py  docstring.py  exceptions.py  http.py  models.py  package_init.py
ahttp_generator/parser/: __init__.py  extractor.py  loader.py
core/: ast_helper.py  loader.py  type_mapper.py
generator/: client.py  docstring.py  exceptions.py  http.py  models.py  package_init.py
parser/: extractor.py
tests/: __init__.py  conftest.py  test_cli.py  test_client_generator.py  test_formatter.py  test_http_generator.py  test_model_generator.py  test_parser.py
